Resolves: fdo#47068 use of pointer to deleted object